# MultimediaRetrieval

./: .gitignore  3D_ShapeDescriptors.py  CMakeLists.txt  Dockerfile  Notes  README.md  ShapeDescriptors.py  ann_search.py  database.py  db_schema.json  distance_functions.py  distance_functions_new.py  distance_functions_old.py  gen.py  gui.py  gui_new.py  load_meshes.py  main.cpp  main.py  normalization.py  open3d_test.py  quality_metrics.py  query_analysis.py  refined_meshes.csv  requirements.txt  resampling.py  shape_extracion.py  statistics.py  test.py  util.py  visualizer.py  weights_selector.py
.devcontainer/: devcontainer.json
PRINCETON_part/: m1.ply  m10.ply  m11.ply  m12.ply  m13.ply  m14.ply  m15.ply  m2.ply  m27.ply  m28.ply  m29.ply  m3.ply  m30.ply  m32.ply  m33.ply  m34.ply  m35.ply  m36.ply  m38.ply  m39.ply  m4.ply  m40.ply  m41.ply  m42.ply  m43.ply  m44.ply  m45.ply  m46.ply  m47.ply  m53.ply  m54.ply  m56.ply  m9.ply
PreprocessingNCleaning/: LabeledDB_new_meshes.xlsx  PrincetonStatistics.xlsx  meshes.xlsx  readme.md
cmake/: libigl.cmake
data/: annoy_index.ann  db.json  feature_weights.txt
mesh_loader/: main.cpp
mesh_loader/dataSample_PLY/: readme.md
